<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group >
        <item
            android:id="@+id/menuItemAdicionar"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/adicionar"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/menuItemOrdenacao"
            android:icon="@android:drawable/arrow_down_float"
            android:title="@string/ordenacao"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/menuItemSobre"
            android:title="@string/sobre" />
        <item
            android:id="@+id/menuItemRestaurar"
            android:title="@string/restaurar_padroes" />
    </group>
</menu>